Update leaderboard section

--- a/index.html
+++ b/index.html
@@ -93,13 +93,12 @@
 					<p class="amount-trees">11 trees</p>
 					<time>15-11-2020 14:31:56</time>
 				</article>
-				<a href="#" class="btn font-black">Add Your Tree</a>
+				<a href="#" class="btn lg font-black">Add Your Tree</a>
 			</section>
-
 		</section>
-		<!-- <img src="images/blue-curve.png" alt="Divider for styling purposes"> -->
+		<img src="images/blue-curve.png" alt="Divider for styling purposes">
 		<section class="projects">
-			<h2>Planting projects</h2>
+			<h3 class="font-black">Planting projects</h3>
 			<p>Wondering where these trees are being planted? Check out the locations for the first trees below.</p>
 			<img src="images/rocket.png" alt="Rocket">
 			<div class="map">
