Almost finished project section and added socials + footer

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 					<img src="images/icon-badge-acorn-2.svg" alt="Badge">
 					<h4 class="font-black">John Doe</h4>
 					<p>For a better world x</p>
-					<p class="amount-trees">11 trees</p>
+					<p class="amount-trees-sm">11 trees</p>
 					<time>15-11-2020 14:31:56</time>
 				</article>
 				<article class="donation">
 					<img src="images/icon-badge-acorn-2.svg" alt="Badge">
 					<h4 class="font-black">John Doe</h4>
 					<p>For a better world x</p>
-					<p class="amount-trees">11 trees</p>
+					<p class="amount-trees-sm">11 trees</p>
 					<time>15-11-2020 14:31:56</time>
 				</article>
 				<a href="#" class="btn lg font-black">Add Your Tree</a>
@@ -100,26 +100,76 @@
 		<section class="projects">
 			<h3 class="font-black">Planting projects</h3>
 			<p>Wondering where these trees are being planted? Check out the locations for the first trees below.</p>
-			<img src="images/rocket.png" alt="Rocket">
-			<div class="map">
-				<!-- Needs a bg image, changes with JS, click through map -->
+			<div class="map-container">
+				<img src="images/rocket.png" alt="Rocket">
+				<div class="map">
+					<!-- BG image -->
+				</div>
+				<div class="radial-gradient">
+					<!-- Radial gradient for styling purposes -->
+				</div>
 			</div>
 			<div class="controls">
 				<div class="control">
-					<img src="images/" alt="Left arrow">
 				</div>
 				<div class="control">
-					<img src="images/" alt="Right arrow">
 				</div>
 			</div>
-			<section class="North America">
+			<section class="north-america">
+				<h3 class="region">North America</h3>
 				<article class="project">
-
+					<h4 class="font-black location-country">Arkansas, United States</h4>
+					<p>Cache River Watershed</p>
+					<p class="amount-trees-lg">50,000 TREES</p>
+					<p>In partnership with The Nature Conservancy, the Arbor Day Foundation is working to improve water along the Cache River, an impaired waterway in Arkansas that is contributing to the hypoxic zone in the Gulf of Mexico. The goals of this project are to reduce runoff into the Cache River watershed, increase wetland habitat, and provide incentives for landowners to transition frequently flooded cropland back into forestland.</p>
+					<div class="badge">
+						<img src="images/badge.png" alt="Badge: displays year of project">
+						<p class="font-black">2021 PROJECT</p>
+					</div>
 				</article>
 			</section>
 		</section>
+		<section class="socials">
+			<h3 class="font-black">#TEAMTREES SOCIAL</h3>
+			<ul>
+				<li>
+					<a href="https://reddit.com/r/teamtrees">
+						<img src="images/reddit-icon.png" alt="Reddit Logo">
+					</a>
+				</li>
+				<li>
+					<a href="https://www.instagram.com/teamtrees/">
+						<img src="images/instagram-icon.png" alt="">
+					</a>
+				</li>
+				<li>
+					<a href="https://twitter.com/teamtreesofficl">
+						<img src="images/twitter-icon.png" alt="">
+					</a>
+				</li>
+				<li>
+					<a href="https://www.facebook.com/teamtreesofficial/">
+						<img src="images/facebook-icon.png" alt="">
+					</a>
+				</li>
+			</ul>
+			<iframe src="https://cdn.hypemarks.com/t/teamtrees_1?width=992&amp;expand=true&amp;infiniteScroll=true&amp;personalization_id=1047512" scrolling="yes" frameborder="0" allowtransparency="true" title="Social Feed"></iframe>
+		</section>
 	</main>
-
+	<footer>
+		<img src="images/footer.png" alt="Footer: landscape/hills">
+		<ul>
+			<li>
+				<a href="#" class="font-black">FAQ</a>
+			</li>
+			<li>
+				<a href="#" class="font-black">Contact Us</a>
+			</li>
+			<li>
+				<a href="#" class="font-black">Press Inquiries</a>
+			</li>
+		</ul>
+	</footer>
 	<script src="scripts/script.js"></script>
 </body>
 
