Finished footer + started with search page

--- a/search.html
+++ b/search.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>sike</h1>
-  </body>
+<!doctype html>
+<html lang="nl">
+<head>
+	<meta charset="UTF-8">
+	<meta name="author" content="Nino van der Vinden">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>#teamtrees</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+	<link href="styles/style.css" rel="stylesheet">
+</head>
+<body>
+	<header class="header-search">
+		<nav class="logo-nav">
+			<img src="images/logo.png" alt="#teamtrees logo">
+      <a href="index.html">Back Home</a>
+		</nav>
+	</header>
+	<main class="main-search">
+    <section>
+      <h1>Donor Search</h1>
+      <p>More than 800,000 people joined #TeamTrees® to raise $20 million to plant 20 million trees by 2020. Whether you planted one tree, or a million-and-one, we did this together.</p>
+    </section>
+	</main>
+	<footer>
+		<img src="images/footer.png" alt="Footer: landscape/hills">
+		<ul>
+			<li>
+				<a href="#" class="font-black">FAQ</a>
+			</li>
+			<li>
+				<a href="#" class="font-black">Contact Us</a>
+			</li>
+			<li>
+				<a href="#" class="font-black">Press Inquiries</a>
+			</li>
+		</ul>
+	</footer>
+	<script src="scripts/script.js"></script>
+</body>
 </html>
