Added parallax to header

--- a/index.html
+++ b/index.html
@@ -40,16 +40,18 @@
 			<h1>YEAR TWO!</h1>
 			<p class="font-medium">One year ago we formed a team, took over the internet and scored a win for the planet. Plant with us and track our progress!</p>
 		</article>
-		<div class="video">
+		<div>
 			<img src="images/astronaut.png" alt="Astronaut holding sign: Year two!">
 			<img src="images/video-thumbnail.jpg" alt="Mr. Beast">
 			<img src="images/play-button.png" alt="Play button">
 			<img src="images/video-banner-2.png" alt="Label: Year 1 Planting Update">
 		</div>
-		<h2>22,411,854</h2>
-		<div>
-			<img src="images/header.png" alt="Landscape parallax scroll">
-		</div>
+		<section>
+			<h2 class="parallax-txt">22,411,854</h2>
+			<div>
+				<img src="images/header.png" alt="Landscape parallax scroll">
+			</div>
+		</section>
 	</header>
 	<main>
 		<section class="donate">
