Navigation links jump to sections & lil JS rewrite

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 			<img src="images/leaf.png" alt="leaf">
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="#">Join #teamtrees</a></li>
-				<li><a href="#">Leaderboard</a></li>
-				<li><a href="#">Social</a></li>
-				<li><a href="#">Planting projects</a></li>
+				<li><a href="#donate">Join #teamtrees</a></li>
+				<li><a href="#leaderboard">Leaderboard</a></li>
+				<li><a href="#social">Social</a></li>
+				<li><a href="#projects">Planting projects</a></li>
 				<li><a href="#">Store</a></li>
 			</ul>
 			<div>
@@ -54,7 +54,7 @@
 		</section>
 	</header>
 	<main>
-		<section class="donate">
+		<section class="donate" id="donate">
 			<h3>Join #teamtrees</h3>
 			<p class="font-bold">$1 plants a tree</p>
 			<form>
@@ -76,7 +76,7 @@
 			</form>
 		</section>
 		<section class="leaderboard">
-			<h3>Leaderboard</h3>
+			<h3 id="leaderboard">Leaderboard</h3>
 			<div class="search-filter font-bold">
 				<a href="search.html" class="anchor-exception"><span>Search</span> <img src="images/search.png" alt="Vergrootglas"></a>
 				<!-- div hieronder moet form zijn maar tript dan? -->
@@ -106,7 +106,7 @@
 				<a href="#" class="btn lg">Add Your Tree</a>
 			</div>
 		</section>
-		<img src="images/blue-curve.png" alt="Divider for styling purposes">
+		<img src="images/blue-curve.png" alt="Divider for styling purposes" id="projects">
 		<section class="projects">
 			<h3>Planting projects</h3>
 			<p>Wondering where these trees are being planted? Check out the locations for the first trees below.</p>
@@ -139,7 +139,7 @@
 				</article>
 			</section>
 		</section>
-		<section class="socials">
+		<section class="socials" id="social">
 			<h3>#TEAMTREES SOCIAL</h3>
 			<ul>
 				<li>
