Removed position absolute bc of real mobile viewport

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
 			<p>Check out our <a href="#">Planting Locations</a> to learn more about the 7.1 million trees we've planted so far!</p>
 		</div>
 		<div role="banner">
-			<img src="images/logo.png" alt="#teamtrees logo">
-			<button type="button" class="hamburger-menu">
-				<img src="images/hamburger.png" alt="Hamburger menu">
-			</button>
+			<div>
+				<img src="images/logo.png" alt="#teamtrees logo">
+			</div>
+			<div>
+				<button type="button" class="hamburger-menu">
+					<img src="images/hamburger.png" alt="Hamburger menu">
+				</button>
+			</div>
 		</div>
 		<nav>
 			<button type="button" class="close-menu"></button>
