Added pop-up video to nav and header

--- a/index.html
+++ b/index.html
@@ -38,18 +38,24 @@
 				<li><a href="#projects">Planting projects</a></li>
 				<li><a href="#">Store</a></li>
 			</ul>
-			<div>
+			<div class="videos">
 				<img src="images/video-thumbnail.jpg" alt="Mr. Beast">
 				<img src="images/play-button.png" alt="Play button">
 			</div>
 		</nav>
+		<!-- Hidden video pops-up -->
+		<div class="pop-up">
+			<button type="button" class="close-popup"></button>
+			<iframe class="" src="https://www.youtube.com/embed/myPgz2RRdok?autoplay=1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+			<img src="images/shadow-hills.png" alt="Shadow hills">
+		</div>
 		<!-- Intro article -->
 		<article>
 			<h1>YEAR TWO!</h1>
 			<p>One year ago we formed a team, took over the internet and scored a win for the planet. Plant with us and track our progress!</p>
 		</article>
 		<!-- Video -->
-		<div>
+		<div class="videos">
 			<img src="images/astronaut.png" alt="Astronaut holding sign: Year two!">
 			<img src="images/video-thumbnail.jpg" alt="Mr. Beast">
 			<img src="images/play-button.png" alt="Play button">
