Mediaquery for SE, styled 2nd page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<li><a href="#leaderboard">Leaderboard</a></li>
 				<li><a href="#social">Social</a></li>
 				<li><a href="#projects">Planting projects</a></li>
-				<li><a href="#">Store</a></li>
+				<li><a href="store.html">Store</a></li>
 			</ul>
 			<div class="videos">
 				<img src="images/video-thumbnail.jpg" alt="Mr. Beast">
@@ -45,8 +45,11 @@
 		</nav>
 		<!-- Hidden video pops-up -->
 		<div class="pop-up">
-			<button type="button" class="close-popup"></button>
-			<iframe class="" src="https://www.youtube.com/embed/myPgz2RRdok?autoplay=1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+			<div>
+				<button type="button" class="close-popup"></button>
+				<iframe src="https://www.youtube.com/embed/myPgz2RRdok?autoplay=1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="yes"></iframe>
+			</div>
+
 			<img src="images/shadow-hills.png" alt="Shadow hills">
 		</div>
 		<!-- Intro article -->
@@ -99,7 +102,7 @@
 		<section>
 			<h3 id="leaderboard">Leaderboard</h3>
 			<div>
-				<a href="search.html" class="anchor-exception"><span>Search</span><img src="images/search.png" alt="Magnifying glass"></a>
+				<a href="#" class="anchor-exception"><span>Search</span><img src="images/search.png" alt="Magnifying glass"></a>
 				<!-- Filter -->
 				<form>
 					<input type='radio' name='filter' id="filter1" checked="checked"/>
